manifests/frontend/sa-frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sa-frontend
  labels:
    app: sa-frontend
spec:
  containers:
    - image: kevinedwards/sentiment-analysis-frontend:5.0.0
      name: sa-frontend
      ports:
        - containerPort: 80
